--- a/style.css
+++ b/style.css
@@ -70,6 +70,20 @@ body.dark-mode button img:not(#theme-icon) {
   margin-top: 100px; /* Dostosowanie przestrzeni poniżej nagłówka */
   display: none;
   height: 100vh;
+  text-align: center;
+}
+.new-content h1, .new-content p, .new-content ul {
+  text-align: center;
+}
+
+.new-content ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.new-content ul li {
+  margin: 5px 0;
+  font-size: 18px;
 }
 #costam {
   margin-top: 10%; /* Zmienna wartość procentowa w zależności od tego, jak daleko chcesz przesunąć */
