--- a/style.css
+++ b/style.css
@@ -112,3 +112,11 @@ ul{
 .achievement .text {
   text-align: justify;
 }
+#map {
+  height: 30%;
+  width: 20%;
+  position: absolute;
+  top: 30%;
+  left: 30%; 
+  transform: translate(-50%, -50%);
+}
