--- a/style.css
+++ b/style.css
@@ -120,3 +120,51 @@ ul{
   left: 30%; 
   transform: translate(-50%, -50%);
 }
+.zawody-container {
+  display: flex;
+  flex-direction: column; /* Ustawienie zawodów jedno pod drugim */
+  align-items: flex-start;
+  gap: 30px; /* Odstęp między zawodami */
+  margin-left: 250px; /* Przesunięcie w lewo */
+}
+
+.zawody {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: left;
+  gap: 10px;
+  max-width: 800px;
+}
+.zawody .text h2 {
+  display: block; /* Upewnia się, że nagłówek zajmuje pełną szerokość */
+  text-align: left; /* Wyrównanie do lewej */
+  white-space: nowrap; /* Zapobiega rozciąganiu */
+}
+
+.zawody .text h3 {
+  text-align: justify; /* Wyrównanie treści do lewej */
+}
+
+
+.zawody img {
+  width: 500px;
+  height: auto;
+  border-radius: 10px;
+}
+
+.zawody .text {
+  text-align: justify;
+}
+.zawody-btn {
+  border: none;
+  background: none;
+  cursor: pointer;
+  width: 100%;
+  text-align: left;
+  padding: 0;
+}
+
+.zawody-btn:hover {
+  opacity: 0.8;
+}
